    Note that, however, the diff-ing performed in first-difference model estimation
    by plm(..., model = "fd") is based on row-wise differences of the model matrix.
  * groupGenerics now used for 'pseries' objects, implemented as a wrapper 
    for methods in groups 'Math', 'Ops' and 'Complex' (see ?groupGeneric).
    Thus, propagation to a higher or lower data type works correctly when 
    performed on pseries, e.g. a c("pseries", "interger") gets propagated
    to c("pseries", "numeric") if an operation returns a decimal.
  * as.data.frame.pdata.frame gained argument 'keep.attributes'.
  * [.pdata.frame: in case a single column, i.e., a pseries is returned, this 
    pseries now has names (now consistent to extraction by $.pdata.frame and
    [[.pdata.frame).
  * is.pseries: added function to check if an object qualifies as a pseries


Changes in version 1.6-6

  * ercomp:
      * re-written to be a more general framework.
      * (internal) returned ercomp object: component 'sigma2' is now a numeric;
        component 'theta' is now either a numeric (balanced models) or a list with 
        numerics (unbalanced models), the numerics being of length 1 (one-way models)
        or of length equal to the number of observations (two-ways models).
  * model.matrix.*: gained new argument 'cstcovar.rm' to remove specific columns.
  * pmodel.response: now returns object of class c("pseries", "numeric") [was "numeric"].
  * plm:
      * random effect models: some random methods extended to unbalanced 
        two-ways case (Nerlove's method only supports balanced one-way, two-ways),
        thanks to the more general ercomp framework.
      * nested random effects model implemented (Baltagi/Song/Jung (2001)),
        use effect = "nested", see example in ?plm.
      * two-way fixed effects model for unbalanced panels is faster.
      * new argument 'weights' added.
      * fix backward compatibility for the (deprecated!) argument 'instruments'