@@ -11,13 +11,15 @@ Changes in version 1.6-7
   * groupGenerics now used for 'pseries' objects, implemented as a wrapper 
     for methods in groups 'Math', 'Ops' and 'Complex' (see ?groupGeneric).
     Thus, propagation to a higher or lower data type works correctly when 
-    performed on pseries, e.g. a c("pseries", "interger") gets propagated
+    performed on pseries, e.g. a c("pseries", "interger") is propagated
     to c("pseries", "numeric") if an operation returns a decimal.
   * as.data.frame.pdata.frame gained argument 'keep.attributes'.
   * [.pdata.frame: in case a single column, i.e., a pseries is returned, this 
     pseries now has names (now consistent to extraction by $.pdata.frame and
     [[.pdata.frame).
-  * is.pseries: added function to check if an object qualifies as a pseries
+  * is.pseries: added function to check if an object qualifies as a pseries.
+  * (internal) is.index, has.index: new non-exported functions to check if an
+    object is or has a proper index (in the sense of the plm package).
 
 
 Changes in version 1.6-6
